# smart_assistive_ws

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/cognitive_layer/: main.cpp
src/interaction_layer/: audio_output.cpp  haptic_output.cpp
src/models/: best.onnx
src/perception_layer/: imu_input.cpp  morse_input.cpp  spatial_input.cpp  vision_input.cpp
src/slam_mapping/launch/: localization_mode.launch.py  mapping_mode.launch.py
src/slam_mapping/maps/: house_map.db
